@@ -18,3 +18,5 @@ bool isInt(const std::string &s);
 
 void sleep_seconds(const long seconds);
 void sleep_milliseconds(const long milliseconds);
+
+int mkdir_deep(const char *szDirName, int secattr);
